--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -18,7 +18,6 @@
 .footer-soc-list {
   display: flex;
   gap: 10px;
-  margin-bottom: 20px;
 }
 
 .footer-soc-link:hover .footer-soc-icon,
@@ -51,7 +50,6 @@
   border-radius: 16px;
   width: 152px;
   height: 44px;
-  margin-bottom: 40px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -163,6 +161,14 @@
   margin-bottom: 92px;
 }
 
+.footer-soc-wrap {
+  margin-bottom: 20px;
+}
+
+.footer-contact {
+  margin-bottom: 40px;
+}
+
 @media screen and (min-width: 768px) {
   .footer {
     padding-bottom: 32px;
@@ -201,6 +207,8 @@
   .footer-contact-tel {
     font-size: 14px;
     line-height: 1.29;
+    height: 48px;
+    margin-bottom: unset;
   }
 
   .footer-title {
@@ -234,6 +242,14 @@
   }
 
   .footer-bottom-text {
+    margin-bottom: unset;
+  }
+
+  .footer-soc-wrap {
+    margin-bottom: unset;
+  }
+
+  .footer-contact {
     margin-bottom: unset;
   }
 }
