--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -207,6 +207,7 @@
   .footer-contact-tel {
     font-size: 14px;
     line-height: 1.29;
+    width: 160px;
     height: 48px;
     margin-bottom: unset;
   }
