fix modal and label

--- a/src/partials/contact-us.html
+++ b/src/partials/contact-us.html
@@ -18,9 +18,8 @@
                   placeholder="Name"
                   required
                 />
-
-                <p class="text-valid">Succes!</p>
-                <p class="text-invalid">Invalid name, try again</p>
+                <span class="text-valid">Succes!</span>
+                <span class="text-invalid">Invalid name, try again</span>
               </label>
             </div>
           </div>
@@ -36,8 +35,8 @@
                   pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
                   required
                 />
-                <p class="text-valid">Succes!</p>
-                <p class="text-invalid">Invalid email, try again</p>
+                <span class="text-valid">Succes!</span>
+                <span class="text-invalid">Invalid email, try again</span>
               </label>
             </div>
           </div>
@@ -53,8 +52,10 @@
                   pattern="^\+\d{3}-\d{2}-\d{3}-\d{2}-\d{2}$"
                   required
                 />
-                <p class="text-valid">Succes!</p>
-                <p class="text-invalid">Invalid phone number, try again</p>
+                <span class="text-valid">Succes!</span>
+                <span class="text-invalid"
+                  >Invalid phone number, try again</span
+                >
               </label>
             </div>
           </div>
