--- a/src/css/header.css
+++ b/src/css/header.css
@@ -160,7 +160,7 @@
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  max-width: 330px;
+  width: 200px;
   height: 100%;
   background-image: url(../img/modal/menu-mob-bg-min.jpg);
   background-repeat: no-repeat;
@@ -246,6 +246,7 @@
 @media screen and (min-width: 768px) {
   .mob-menu {
     background-image: url(../img/modal/menu-tab-bg-min.jpg);
+    width: 330px;
   }
 
   @media screen and (min-resolution: 2x) {
@@ -266,5 +267,13 @@
   .mob-menu .footer-soc-icon {
     width: 20px;
     height: 20px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .mob-menu {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
   }
 }
