--- a/src/css/header.css
+++ b/src/css/header.css
@@ -6,6 +6,10 @@
 
 .header {
   border-bottom: 1px solid rgba(12, 12, 12, 0.1);
+  position: sticky;
+  top: 0;
+  z-index: 9;
+  background-color: #fbfbfb;
 }
 
 .header-mob-menu {
