--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -74,7 +74,7 @@
     <nav class="mob-menu-nav">
       <ul class="mob-menu-wrapper">
         <li>
-          <a class="mob-menu-link" href="#">Home</a>
+          <a class="mob-menu-link" href="#hero">Home</a>
         </li>
         <li><a class="mob-menu-link" href="#about">About Us</a></li>
         <li><a class="mob-menu-link" href="#catalog">Catalog</a></li>
